feat(design*): start designing

--- a/data/quotes.yaml
+++ b/data/quotes.yaml
@@ -1,7 +1,7 @@
-- quote: "Wir sind extrem zufrieden mit der Arbeit von Nina Regli. Sie hat uns geholfen unse-re Anforderungen zu definieren, schnell grafische Entwürfe präsentiert und immer auf unsere Wünsche reagiert. Jetzt haben wir eine Webseite, welche unseren Be-dürfnissen vollumfänglich entspricht. Kurz: Wir empfehlen sie jederzeit weiter."
+- quote: "We're extremly happy with the work Nina has done for us. She helped us to define our requirements, she presented us quickly designs and responded always to our needs. Now we have a website which fullfills our requirements completeley. In short We can recommend her at any time."
   name: Tom Cassee
-  function: Medien & Kommunikation Konzernverantwortungsinitiative
+  function: " - Media & Communications Konzernverantwortungsinitiative"
 
-- quote: "Mit Nina Regli konnten wir nicht nur eine kompetente Programmiererin sondern auch einen teamfähigen und aufgestellten Menschen für den Bau von zwei neuen Web-seiten engagieren. Sie überzeugt durch konkretes Fachwissen sowie einem breiten Erfahrungsschatz aus den Bereichen der Projektarbeit. Wir fühlten uns im bisherigen Prozess von der Konzeption der Webseite bis zum Bau stets sicher und gut beraten und konnten uns immer auf Ninas technisches Knowhow und ihr Flair für Grafik ver-  lassen. Wir freuen uns auf weitere Zusammenarbeiten!"
+- quote: "With Nina we not only have a competent coder but also a great team player. She has build already four websites for us. She impresses with her online knowledge but also know a lot about managing a project. We've felt from the very begining of a process until the end well advised and we can rely on her technical knowledge and her sense for asthetics. We're looking forward to continue working with her!"
   name: Elia Meier
-  function: Verantwortlicher Kommunikation Helvetia Rockt
+  function: " - Head of communications Helvetia Rockt"
