feat(design): add fonts, client animation

--- a/data/quotes.yaml
+++ b/data/quotes.yaml
@@ -1,7 +1,7 @@
-- quote: "We're extremly happy with the work Nina has done for us. She helped us to define our requirements, she presented us quickly designs and responded always to our needs. Now we have a website which fullfills our requirements completeley. In short We can recommend her at any time."
+- quote: "We're extremly happy with the work Nina has done for us. She helped us to define our requirements, she presented us quickly with designs and always responded to our needs. Now we have a website which fullfills our requirements completeley. In short: We can recommend her at any time."
   name: Tom Cassee
   function: " - Media & Communications Konzernverantwortungsinitiative"
 
-- quote: "With Nina we not only have a competent coder but also a great team player. She has build already four websites for us. She impresses with her online knowledge but also know a lot about managing a project. We've felt from the very begining of a process until the end well advised and we can rely on her technical knowledge and her sense for asthetics. We're looking forward to continue working with her!"
+- quote: "With Nina we not only have a competent coder but also a great team player. We've already done several website projects with her. She impresses with her online knowledge but also know a lot about managing a project. We've felt from the very begining of a process until the end well advised and we can rely on her technical knowledge and her sense for asthetics. We're looking forward to continue working with her!"
   name: Elia Meier
   function: " - Head of communications Helvetia Rockt"
