feat(accordion): get accordion to work

--- a/data/work.yaml
+++ b/data/work.yaml
@@ -1,53 +1,49 @@
 - title: Music Directory
-  work: Concept, Design, Development - Design in collaboration with Moana Bischof & Julia Weiss
-  img: "/img/musicdirectory.png"
-  video: "/img/musicdirectory.webm"
+  work: Concept |  Design in collaboration with Moana Bischof & Julia Weiss | Development
+  video: 521342048
   url: musicdirectory.ch
 
+- title: Template for Petition
+  work: Concept |  Design | Development
+  video: 523812106
+  url: https://stimmrechtfueralle.ch/
+
 - title: Plattform Menschenhandel
-  work: Development - Design by Moana Bischof
-  img: "/img/plattform.png"
-  video: "/img/musicdirectory.webm"
+  work: Concept | Development - Design by Moana Bischof
+  video: 522330466
   url: https://plattform-menschenhandel.ch/
 
 - title: Helvetiarockt
-  work: Concept, Development - Design by Moana Bischof & Julia Weiss
-  img: "/img/helvetiarockt.png"
-  video: "/img/musicdirectory.webm"
+  work: Concept | Development - Design by Moana Bischof & Julia Weiss
+  video: 521342048
   url: https://helvetiarock.ch
 
 - title: Konzerninitiative
-  work: Concept, Design, Development
-  img: "/img/konzerninitiative.png"
-  video: "/img/musicdirectory.webm"
+  work: Concept | Design | Development - in collaboration with Webkinder
+  video: 521342048
   url: https://konzern-initiative.ch
 
 - title: Female Music Lab
-  work: Concept, Development - Design by Moana Bischof & Julia Weiss
-  img: "/img/femalemusiclab.png"
-  video: "/img/musicdirectory.webm"
+  work: Concept | Development - Design by Moana Bischof & Julia Weiss
+  video: 521342048
   url: https://femalemusiclab.ch/
 
 - title: Hauptstadt Genossenschaft
-  work: Concept, Design, Development
-  img: "/img/genossenschaft.png"
-  video: "/img/musicdirectory.webm"
+  work: Concept | Design | Development
+  video: 521342048
   url: https://hauptstadt-genossenschaft.ch
 
 - title: Sanspapiers Anlaufstelle Zürich
-  work: Concept, Design, Development
-  img: "/img/anlaufstelle.png"
-  video: "/img/musicdirectory.webm"
+  work: Concept | Design | Development
+  video: 521342048
   url: https://sans-papiers-zuerich.ch/
 
 - title: Gsoa
-  work: Concept, Design, Development
-  img: "/img/gsoa.png"
-  video: "/img/musicdirectory.webm"
+  work: Concept | Design | Development
+  video: 521342048
   url: https://www.gsoa.ch/
 
 - title: Wide Switzerland
-  work: Concept, Design, Development
-  img: "/img/wide.png"
-  video: "/img/musicdirectory.webm"
+  work: Concept | Design | Development
+  video: 521342048
   url: https://wide-switzerland.ch/
