feat(client): style client section, make funny shape button

--- a/data/work.yaml
+++ b/data/work.yaml
@@ -1,7 +1,7 @@
 - title: Music Directory
   work: Concept |  Design in collaboration with Moana Bischof & Julia Weiss | Development
   video: 521342048
-  url: musicdirectory.ch
+  url: https://musicdirectory.ch
 
 - title: Template for Petition
   work: Concept |  Design | Development
