feat(work): make it partly responsive

--- a/data/quotes.yaml
+++ b/data/quotes.yaml
@@ -2,6 +2,6 @@
   name: Tom Cassee
   function: " - Media & Communications Konzernverantwortungsinitiative"
 
-- quote: "With Nina we not only have a competent coder but also a great team player. We've already done several website projects with her. She impresses with her online knowledge but also know a lot about managing a project. We've felt from the very begining of a process until the end well advised and we can rely on her technical knowledge and her sense for asthetics. We're looking forward to continue working with her!"
+- quote: "Nina is not only a very competent coder but also a great team player and knows a lot about managing a project. We've already done several website projects with her. From the very beginning of a project until the end we feel well advised and we can rely on her technical knowledge and her sense for aesthetics. We're looking forward to continue working with her!"
   name: Elia Meier
   function: " - Head of communications Helvetia Rockt"
