--- a/data/work.yaml
+++ b/data/work.yaml
@@ -1,65 +1,77 @@
 - title: Music Directory
   class: musicdirectory
   work: Concept • Development • Design in collaboration with Moana Bischof & Julia Weiss
+  about: The Music Directory is a platform for women, inter-, trans- and non-binary people in the Swiss music industry. People can register with their profile and their projects and find like minded people
+  tech: The website is multilingual, has filters, a profiel and registration form and search capacity.
   video: 521342048
   url: https://musicdirectory.ch
 
 - title: Template for Petition
   class: petition
   work: Concept • Design • Development
+  about: The Music Directory is a platform for women, inter-, trans- and non-binary people in the Swiss music industry. People can register themselve on the site and find likeminded people.
   video: 523812106
   url: https://stimmrechtfueralle.ch/
 
 - title: Glaslabor
   class: glaslabor
   work: Development • Design by Sabine Affolter
-  video: 523812106
+  about: The Music Directory is a platform for women, inter-, trans- and non-binary people in the Swiss music industry. People can register themselve on the site and find likeminded people.
+  video: 2ff855bf64
   url: https://stimmrechtfueralle.ch/
 
 - title: Plattform Menschenhandel
   class: menschenhandel
   work: Concept • Development • Design by Moana Bischof
+  about: The Music Directory is a platform for women, inter-, trans- and non-binary people in the Swiss music industry. People can register themselve on the site and find likeminded people.
   video: 522330466
   url: https://plattform-menschenhandel.ch/
 
 - title: Helvetiarockt
   class: helvetiarockt
   work: Concept • Development • Design by Moana Bischof & Julia Weiss
+  about: The Music Directory is a platform for women, inter-, trans- and non-binary people in the Swiss music industry. People can register themselve on the site and find likeminded people.
   video: 521342048
   url: https://helvetiarock.ch
 
 - title: Konzerninitiative
   class: konzerninitiative
   work: Concept • Design • Development - in collaboration with Webkinder
+  about: The Music Directory is a platform for women, inter-, trans- and non-binary people in the Swiss music industry. People can register themselve on the site and find likeminded people.
   video: 521342048
   url: https://konzern-initiative.ch
 
 - title: Female Music Lab
   class: femalemusiclab
   work: Concept • Development • Design by Moana Bischof & Julia Weiss
+  about: The Music Directory is a platform for women, inter-, trans- and non-binary people in the Swiss music industry. People can register themselve on the site and find likeminded people.
   video: 521342048
   url: https://femalemusiclab.ch/
 
 - title: Hauptstadt Genossenschaft
   class: genossenschaft
   work: Concept • Design • Development
+  about: The Music Directory is a platform for women, inter-, trans- and non-binary people in the Swiss music industry. People can register themselve on the site and find likeminded people.
   video: 521342048
   url: https://hauptstadt-genossenschaft.ch
 
 - title: Sanspapiers Anlaufstelle Zürich
   class: sanspapierszuerich
   work: Concept • Design • Development
+  about: The Music Directory is a platform for women, inter-, trans- and non-binary people in the Swiss music industry. People can register themselve on the site and find likeminded people.
   video: 521342048
   url: https://sans-papiers-zuerich.ch/
 
 - title: Gsoa
   class: gsoa
   work: Concept • Design • Development
+  about: The Music Directory is a platform for women, inter-, trans- and non-binary people in the Swiss music industry. People can register themselve on the site and find likeminded people.
   video: 521342048
   url: https://www.gsoa.ch/
 
 - title: Wide Switzerland
   class: wide
   work: Concept • Design • Development
+  about: The Music Directory is a platform for women, inter-, trans- and non-binary people in the Swiss music industry. People can register themselve on the site and find likeminded people.
   video: 521342048
   url: https://wide-switzerland.ch/
