feat(client) scroll to top

--- a/data/work.yaml
+++ b/data/work.yaml
@@ -1,15 +1,16 @@
 - title: Music Directory
   class: musicdirectory
   work: Concept • Development • Design in collaboration with Moana Bischof & Julia Weiss
-  about: The Music Directory is a platform for women, inter-, trans- and non-binary people in the Swiss music industry. People can register with their profile and their projects and find like minded people
-  tech: The website is multilingual, has filters, a profiel and registration form and search capacity.
+  about: Music Directory is a platform for women, inter-, trans- and non-binary people in the Swiss music industry. People can register with their profile and their projects and find like minded people
+  tech: The website is multilingual, has filters, a profile and registration form and search capacity.
   video: 521342048
   url: https://musicdirectory.ch
 
 - title: Template for Petition
   class: petition
   work: Concept • Design • Development
-  about: The Music Directory is a platform for women, inter-, trans- and non-binary people in the Swiss music industry. People can register themselve on the site and find likeminded people.
+  about: This template build for the Swiss labour party offers an efficient way to collect signature for a petition.
+  tech: The template is versatile, allows different layouts for different campaigns and offers different color combinations. Beside forms it offers the possiblity to share the petition on different plattforms and to donate. 
   video: 523812106
   url: https://stimmrechtfueralle.ch/
 
