feat(quotes/about): prettify it

--- a/data/work.yaml
+++ b/data/work.yaml
@@ -10,7 +10,7 @@
   class: petition
   work: Concept • Design • Development
   about: This template build for the Swiss labour party offers an efficient way to collect signature for a petition.
-  tech: The template is versatile, allows different layouts for different campaigns and offers different color combinations. Beside forms it offers the possiblity to share the petition on different plattforms and to donate. 
+  tech: The template is versatile, allows different layouts for different campaigns and offers various color combinations. Beside forms it includes the possiblity to share the petition on different plattforms and to donate. 
   video: 523812106
   url: https://stimmrechtfueralle.ch/
 
