--- a/data/quotes.yaml
+++ b/data/quotes.yaml
@@ -1,6 +1,6 @@
 - quote: "We're extremly happy with the work Nina has done for us. She helped us to define our requirements, she presented us quickly with designs and always responded to our needs. Now we have a website which fullfills our requirements completeley. In short: We can recommend her at any time."
   name: Tom Cassee
-  function: " - Media & Communications Konzernverantwortungsinitiative"
+  function: " - Media & Communications Konzerninitiative"
 
 - quote: "Nina is not only a very competent coder but also a great team player and knows a lot about managing a project. We've already done several website projects with her. From the very beginning of a project until the end we feel well advised and we can rely on her technical knowledge and her sense for aesthetics. We're looking forward to continue working with her!"
   name: Elia Meier
