--- a/data/work.yaml
+++ b/data/work.yaml
@@ -10,35 +10,38 @@
   class: petition
   work: Concept • Design • Development
   about: This template build for the Swiss labour party offers an efficient way to collect signature for a petition.
-  tech: The template is versatile, allows different layouts for different campaigns and offers various color combinations. Beside forms it includes the possiblity to share the petition on different plattforms and to donate. 
+  tech: The template is versatile, allows different layouts for different campaigns and offers various color combinations. Beside forms it includes the possiblity to share the petition on different plattforms and to donate.
   video: 523812106
   url: https://stimmrechtfueralle.ch/
 
 - title: Glaslabor
   class: glaslabor
   work: Development • Design by Sabine Affolter
-  about: The Music Directory is a platform for women, inter-, trans- and non-binary people in the Swiss music industry. People can register themselve on the site and find likeminded people.
+  about: Handmade glass vessels from Berne.
+  tech: An easy aesthetically pleasing but unobtrusive shop is the center piece of this multlingual website. The beautiful handmade products should speak for themselve.
   video: 521342048
   url: https://stimmrechtfueralle.ch/
 
-- title: Plattform Menschenhandel
+- title: Plattform Traite - Swiss platform against human trafficking
   class: menschenhandel
   work: Concept • Development • Design by Moana Bischof
-  about: The Music Directory is a platform for women, inter-, trans- and non-binary people in the Swiss music industry. People can register themselve on the site and find likeminded people.
+  about: The Swiss Platform against Human Trafficking is an initiative of different non-governmental organizations that are active against human trafficking.
+  tech: The focus of the website is on delivering clear and important information about the issue around human trafficking.
   video: 522330466
   url: https://plattform-menschenhandel.ch/
 
 - title: Helvetiarockt
   class: helvetiarockt
   work: Concept • Development • Design by Moana Bischof & Julia Weiss
-  about: The Music Directory is a platform for women, inter-, trans- and non-binary people in the Swiss music industry. People can register themselve on the site and find likeminded people.
+  about: Helvetiarockt is the Swiss coordination office and networking platform for female* musicians in jazz, pop and rock. The organisation has been campaigning for a significant increase in the proportion of women* representation in the Swiss music industry.
+  tech: The multingual website is covering the broad activities which this organisation offers to the women* in the music industry.
   video: 521342048
   url: https://helvetiarock.ch
 
-- title: Konzerninitiative
+- title: Konzerninitiative - The responsible business initiative
   class: konzerninitiative
   work: Concept • Design • Development - in collaboration with Webkinder
-  about: The Music Directory is a platform for women, inter-, trans- and non-binary people in the Swiss music industry. People can register themselve on the site and find likeminded people.
+  about: The Responsible Business Initiative wanted multinationals to respect human rights and the environment in their activities abroad.
   video: 521342048
   url: https://konzern-initiative.ch
 
@@ -52,27 +55,27 @@
 - title: Hauptstadt Genossenschaft
   class: genossenschaft
   work: Concept • Design • Development
-  about: The Music Directory is a platform for women, inter-, trans- and non-binary people in the Swiss music industry. People can register themselve on the site and find likeminded people.
+  about:
   video: 521342048
   url: https://hauptstadt-genossenschaft.ch
 
 - title: Sanspapiers Anlaufstelle Zürich
   class: sanspapierszuerich
   work: Concept • Design • Development
-  about: The Music Directory is a platform for women, inter-, trans- and non-binary people in the Swiss music industry. People can register themselve on the site and find likeminded people.
+  about: The Sans-Papiers Anlaufstelle Zürich SPAZ advises migrants without regular residence status and raises and sensitises the state and the public to the Sans-Papiers and their precarious living situation.
   video: 521342048
   url: https://sans-papiers-zuerich.ch/
 
 - title: Gsoa
   class: gsoa
   work: Concept • Design • Development
-  about: The Music Directory is a platform for women, inter-, trans- and non-binary people in the Swiss music industry. People can register themselve on the site and find likeminded people.
+  about: The Group for a Switzerland without an Army (GSoA) is an anti-militarist organisation that opposes any Swiss involvement in war and is committed to global justice.
   video: 521342048
   url: https://www.gsoa.ch/
 
 - title: Wide Switzerland
   class: wide
   work: Concept • Design • Development
-  about: The Music Directory is a platform for women, inter-, trans- and non-binary people in the Swiss music industry. People can register themselve on the site and find likeminded people.
+  about: WIDE SWITZERLAND is a network of NGO representative, academics and activists working in the field of gender and development.
   video: 521342048
   url: https://wide-switzerland.ch/
